Adds tree_shaker flags to access JRE classes (copied from the translator).
PiperOrigin-RevId: 559538952